# diffbot

./: .gitignore  README.md  TODO.md
diffbot_bringup/: package.xml
diffbot_bringup/launch/: diffbot_bringup.launch
diffbot_control/: CMakeLists.txt  package.xml
diffbot_control/config/: diffbot_control.yaml
diffbot_control/include/diffbot_control/: control_to_point.h
diffbot_control/launch/: diffbot_control.launch
diffbot_control/scripts/: control_to_point.py
diffbot_control/src/: control_to_point.cpp
diffbot_description/urdf/: diffbot.urdf.xacro
diffbot_gazebo/: CMakeLists.txt  package.xml
diffbot_gazebo/include/diffbot_gazebo/: odom_to_gps_plugin.h
diffbot_gazebo/launch/: diffbot.launch  diffbot_gazebo.launch
diffbot_gazebo/src/: odom_to_gps_plugin.cpp
diffbot_gazebo/worlds/: diffbot.world
docs/navigation/: README.md
pinpointbot_description/: CMakeLists.txt  package.xml
pinpointbot_description/launch/: view_pinbot.launch
pinpointbot_description/urdf/: pinpoint_include.xacro  pinpoint_robot.urdf.xacro
src/pinpointbot_description/: CMakeLists.txt  package.xml
src/pinpointbot_description/hooks/: pinpointbot_description.sh.in
src/pinpointbot_description/models/: pinpointModel.sdf
src/pinpointbot_gazebo/: CMakeLists.txt  package.xml
src/pinpointbot_gazebo/worlds/: basic_world.sdf  spherical_world.sdf
